--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,24 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+ion-menu{
+    ion-header{
+        img{
+            border-radius: 50%;
+        }
+    }
+    ion-content{
+        ion-col{
+            font-size: large;
+        }
+        img{
+            border-radius: 100%;
+        }
+        
+    }
+    .name-header{
+        text-align: center;
+        font-size: large;
+    }
+}
