--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,47 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="navContent" type="push" swipeEnabled="false">
+    <ion-header>
+        <ion-toolbar>
+            <ion-grid *ngIf="isAuthenticated">
+                <ion-row>
+                    <ion-col col-4>
+                        <img src="{{avatarUrl}}" alt="">
+                    </ion-col>
+                    <ion-col col-8>
+                        <div class="name-header">{{username}}</div>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col>
+                        <button ion-button full disabled>
+                            <ion-icon name="create"></ion-icon>
+                            EDIT BIO
+                        </button>
+                    </ion-col>
+                    <ion-col>
+                        <button ion-button full (click)="logout()">
+                            <ion-icon name="log-out"></ion-icon>
+                            LOG OUT
+                        </button>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content>
+        <ion-grid>
+            <ion-row>
+                <ion-col col-3>
+                    <ion-icon name="home"></ion-icon>
+                </ion-col>
+                <ion-col col-9>HOME</ion-col>
+            </ion-row>
+            <ion-row (click)="goWeather()">
+                <ion-col col-3>
+                    <ion-icon name="partly-sunny"></ion-icon>
+                </ion-col>
+                <ion-col col-9>WEATHER</ion-col>
+            </ion-row>
+        </ion-grid>
+    </ion-content>
+</ion-menu>
+<ion-nav #navContent [root]="rootPage"></ion-nav>
